[gd_scene load_steps=2 format=3 uid="uid://cuqrjuahc6ar5"]

[ext_resource type="Script" path="res://Choose A Deck/choose_your_deck.gd" id="1_7xuy1"]

[node name="Choose A Deck" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = 3.0
script = ExtResource("1_7xuy1")

[node name="Deck_One" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 358.0
offset_top = 244.0
offset_right = -1330.0
offset_bottom = -716.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
text = "Deck One"

[node name="Deck_Two" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 679.0
offset_top = 246.0
offset_right = -1009.0
offset_bottom = -714.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
text = "Deck Two"

[node name="Deck_Three" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1065.0
offset_top = 245.0
offset_right = -623.0
offset_bottom = -715.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
text = "Deck Three"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -2.146
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 619.0
offset_top = 2358.7
offset_right = -648.0
offset_bottom = -945.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 55
text = "Choose Your Deck"
horizontal_alignment = 1
uppercase = true

[node name="Exit_Button" type="Button" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 48.0
offset_right = -1659.0
offset_bottom = -902.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_font_sizes/font_size = 40
text = "      Exit      "

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 337.0
offset_top = 450.0
offset_right = -312.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2

[node name="Confirn_Selection" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 778.0
offset_top = 939.0
offset_right = -853.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Confirm Selection"

[node name="Deck_Four" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1397.0
offset_top = 247.0
offset_right = -291.0
offset_bottom = -713.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
text = "Deck Four"
